--- a/servers/file-server/examples/emu/index.html
+++ b/servers/file-server/examples/emu/index.html
@@ -1,13 +1,28 @@
-<h1>Homebrew NES Roms</h1>
-<ul>
-  <li>
-    <a href="/emulator?rom=Super Bat Puncher.nes">Super Bat Puncher.nes</a>
-  </li>
-  <li>
-    <a href="/emulator?rom=Sgt Helmet.nes">Sgt Helmet.nes</a>
-  </li>
-  <li>
-    <a href="/emulator?rom=Lizard (Demo).nes">Lizard (Demo).nes</a>
-  </li>
-</ul>
-<br>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>NES Emulator</title>
+  <meta name="description" content="NES Emulator">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./css/normalize.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <h2>Homebrew NES Roms</h2>
+  <ul>
+    <li>
+      <a href="/emulator?rom=Super Bat Puncher.nes">Super Bat Puncher.nes</a>
+    </li>
+    <li>
+      <a href="/emulator?rom=Sgt Helmet.nes">Sgt Helmet.nes</a>
+    </li>
+    <li>
+      <a href="/emulator?rom=Lizard (Demo).nes">Lizard (Demo).nes</a>
+    </li>
+  </ul>
+</body>
+
+</html>
