--- a/servers/file-server/examples/emu/emulator/index.html
+++ b/servers/file-server/examples/emu/emulator/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>jsNES</title>
+		<title>NES Emulator</title>
 		
 		<script type="text/javascript" src="/emulator/jsnes.js"></script>
 		<script type="text/javascript" src="/emulator/setup.js"></script>
